<resources>
    <string name="app_name">Diary Line</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

                                                                                                    <!-- Settings -->

                                                                                                        <!-- General-->
    <string name="pref_general_header">General</string>

    <string name="pref_general_tts">TTSEngine</string>
    <string name="pref_general_tts_title">Text To Speech Engine</string>
    <string-array name="pref_general_tts_entry">
        <item>Default</item>
        <item>Ivona</item>
    </string-array>
    <string-array name="pref_general_tts_values">
        <item>1</item>
        <item>2</item>
    </string-array>

                                                                                                        <!-- Notifications -->
    <string name="pref_notification_header">Notifications</string>
    <string name="pref_notification_on">Notification Enabled</string>
    <string name="pref_notification_on_title">Enable Notifications</string>


    <string name="pref_notification_timer">timerNotification</string>
    <string name="pref_notification_timer_title">Choose Time</string>
    <string name="pref_notifications_timer_value">12:00 AM</string>

                                                                                                        <!-- Profile -->
    <string name="pref_profile_header">Profile</string>

    <string name="pref_profile_name">Username</string>
    <string name="pref_profile_name_title">Your Name</string>
    <string name="pref_profile_name_hint">Your Good Name</string>

    <string name="pref_profile_password_on">EnablePassword</string>
    <string name="pref_profile_password_on_title">Enable Password</string>
    <string name="pref_profile_password">Password</string>
    <string name="pref_profile_password_title">Your Password</string>

    <string name="pref_profile_signature_on">EnableSignature</string>
    <string name="pref_profile_signature_on_title">Enable Signature</string>
    <string name="pref_profile_signature">Signature</string>
    <string name="pref_profile_signature_title">Your Pen Signature</string>

                                                                                                        <!-- Data and Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_sync_frequency">SyncFrequency</string>
    <string name="pref_sync_frequency_title">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">Sync Settings</string>


                                                                                                    <!-- About -->
                                                                                                    <!-- Custom TimePicker-->
    <string name="preference_timePicker_h">Hour</string>
    <string name="preference_timePicker_m">Minutes</string>

    <!--Temp-->
    <string name="pref_ringtone_silent">Silent</string>

                                                                                                    <!-- Help -->
    <string name="action_help">Help</string>
    <string name="title_activity_help">Help</string>
    <string name="large_text">
        Welcome to the help page\n
        \nDo you like to write your daily life as a journal.
        Then Dairy Line is a free application that let you do exactly that.\n
        \nFeel free to leave your comments.
        \nThanks!
    </string>
                                                                                                    <!-- Notify Fragment -->
    <string name="notify_default_message">Please tell us how was your day?</string>
    <string name="notify_button_1">Later</string>
    <string name="notify_button_2">OK</string>
                                                                                                    <!-- Diary Preview Fragment -->
    <string name="empty">Nothing to display</string>

                                                                                                    <!-- Editor    -->
    <string name="title_activity_editor">Editor</string>
    <string name="editor_button_1">Done</string>
    <string name="editor_hint">What\'s in your mind</string>

    <string name="push_helper_notification_title_template">Push helper: %1$s</string>



    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="signature_reset">Reset</string>
    <string name="author_sign">Author Sign</string>

    <string name="diary_empty_content">Empty Content</string>
    <string name="empty_string">Nothing to Display</string>
    <string name="popup_list">List</string>
    <string name="popup_diary">Diary Entry</string>
    <string name="popup_notes">Notes</string>

    <string name="editor_reminder">Reminder</string>
    <string name="editor_title">Title</string>

    <string name="title_activity_editor_list">Create List</string>
    <string name="editor_list_title">Shopping List</string>
    <string name="editor_list_addText">Buy Bananas</string>
    <string name="editorList_buttonDescription">Add</string>
    <string name="toast_undo">Undo</string>
    <string name="toast_text">Marked as done.</string>
    <string name="editorMenu_save">Save</string>
    <string name="list_default_title">My Personal List</string>
    <string name="discard">Discarding Changes</string>
    <string name="save">Saved</string>
    <string name="marked">Marked as Done</string>

    <string name="diaryTitle">Today\'s Diary</string>
</resources>
