<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header android:fragment="com.cijo7.diaryline.Settings$GeneralPreferenceFragment"
        android:title="@string/pref_general_header" android:icon="@drawable/ic_info_black_24dp" />

    <header android:fragment="com.cijo7.diaryline.Settings$NotificationPreferenceFragment"
        android:title="@string/pref_notification_header"
        android:icon="@drawable/ic_notifications_black_24dp" />
    <header android:fragment="com.cijo7.diaryline.Settings$ProfilePreferenceFragment"
        android:title="@string/pref_profile_header"
        android:icon="@drawable/ic_profile_24dp" />

    <header android:fragment="com.cijo7.diaryline.Settings$DataSyncPreferenceFragment"
        android:title="@string/pref_header_data_sync" android:icon="@drawable/ic_sync_black_24dp" />

</preference-headers>
