<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_editor_notes" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.cijo7.diaryline.Editor"
    android:layout_marginTop="?attr/actionBarSize"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/text_margin"
    android:layout_marginRight="@dimen/text_margin">
    <EditText
        android:id="@+id/editor_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:inputType="text|textCapWords"
        android:background="@null"
        android:hint="@string/editor_title"
        android:lines="1" />
    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/dividerColor"
        />
    <Button
        android:id="@+id/editor_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_reminder_24dp"
        android:drawableLeft="@drawable/ic_reminder_24dp"
        android:drawablePadding="5dp"
        android:layout_gravity="end"
        android:text="@string/editor_reminder"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/editor_minHeight"
        android:hint="@string/editor_hint"
        android:id="@+id/editor_text"
        android:background="@null"
        android:inputType="textMultiLine|textCapSentences|textNoSuggestions|textAutoCorrect"
        android:fontFamily="sans-serif"
        />
</LinearLayout>
</ScrollView>
